@@ -1,0 +1,13 @@
+<?php
+/*
+ * Copyright 2014-2020 GPLv3, DFD Cryptocoin Values by Mike Kilday: http://DragonFrugal.com
+ */
+
+// Forbid direct INTERNET access to this file
+if ( isset($_SERVER['REQUEST_METHOD']) && realpath(__FILE__) == realpath($_SERVER['SCRIPT_FILENAME']) ) {
+header('HTTP/1.0 403 Forbidden', TRUE, 403);
+exit;
+}
+
+
+?>
