@@ -2589,6 +2589,8 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 -Code and UX / UI cleanup and improvements
 
+-Support for custom cron plugins (plugins that run during normally-scheduled cron jobs for charts / alerts)
+
 IMPORTANT NOTES: 
 
 v4.07.7 AND HIGHER HAVE A MAJOR OVERHAUL TO CONFIGURATION VARIABLE NAMES (FOR EASY-TO-UNDERSTAND NAMES), MIGRATE YOUR CUSTOM CONFIG SETTINGS TO THE #NEW# VARIABLE NAMES
